--- a/frontAssignment/WebContent/template/header.jspf
+++ b/frontAssignment/WebContent/template/header.jspf
@@ -3,7 +3,7 @@
     
 	<nav class="navbar navbar-expand-lg navbar-light bg-light" style="text-align: center;padding-bottom: 12px;padding-top: 35px;">
         <div class="container-fluid" style="display: inline">
-            <a class="navbar-brand" href="/">Jisolbin</a>
+            <a class="navbar-brand" href="/frontAssignment/index.jsp">Jisolbin</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03"
                     aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
