220509 update header position
스크롤 해도 상단 메뉴바 고정되도록 수정

--- a/frontAssignment/WebContent/template/myCss.css
+++ b/frontAssignment/WebContent/template/myCss.css
@@ -1,8 +1,18 @@
 @charset "UTF-8";
 
 /* header */
+.navBar{
+	position: fixed;	
+	width: 100%;
+}
+
 .menuBar{
 	margin: 10px auto 20px auto;
+}
+
+.marginDiv{
+	height:50px;
+	margin-bottom: 100px;
 }
 
 
