update menubar, font-family
- 캐러셀 오류 수정 (line 92)
- 메뉴바 반응형으로 업데이트
- 폰트 수정
- 기타 view 수정

--- a/frontAssignment/WebContent/template/footer.jspf
+++ b/frontAssignment/WebContent/template/footer.jspf
@@ -15,5 +15,5 @@
 </style>
 
 <div class="foot">
-	<a href="https://github.com/JiSolBin"><img id="gitImg" src="https://simpleicons.org/icons/github.svg"></a>
+	<a href="https://github.com/bit01class/busan2022-1"><img id="gitImg" src="https://simpleicons.org/icons/github.svg"></a>
 </div>
