--- a/frontAssignment/WebContent/template/header.jspf
+++ b/frontAssignment/WebContent/template/header.jspf
@@ -1,75 +1,78 @@
 <%@ page language="java" contentType="text/html; charset=UTF-8"
     pageEncoding="UTF-8"%>
-    
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/lux/bootstrap.min.css"
-          integrity="sha384-9+PGKSqjRdkeAU7Eu4nkJU8RFaH8ace8HGXnkiKMP9I9Te0GJ4/km3L1Z8tXigpG" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="<%=myPath %>/template/myCss.css">
-    <link href="https://fonts.googleapis.com/earlyaccess/jejugothic.css" rel="stylesheet">
-    <script type="text/javascript" src="<%=myPath %>/js/jquery-1.12.4.min.js"></script>
-    
-    <script>
-		$(function(){
-			$('<div class="menubtn" style="margin-top: 10px;"/>')
-				.append('<span class="navbar-toggler-icon"></span>')
-				.prependTo('.btnPlace')
-				.click(function(){
-					$('nav>div>div>ul>li').toggle();
-				})
-			;
+
+<script type="text/javascript" src="<%=myPath %>/js/jquery-1.12.4.min.js"></script>
+
+<link href="https://fonts.googleapis.com/earlyaccess/jejugothic.css" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="<%=myPath %>/template/myCss2.css">
+<link rel="stylesheet" type="text/css" href="<%=myPath %>/template/myCss3.css">
+<link rel="stylesheet" type="text/css" href="<%=myPath %>/template/myCss.css">
+<link rel="stylesheet" type="text/css" href="<%=myPath %>/template/myCss4.css">
+<link rel="stylesheet" type="text/css" href="<%=myPath %>/template/myCss5.css">
+<link rel="stylesheet" type="text/css" href="<%=myPath %>/template/myCss6.css">
+<link rel="stylesheet" type="text/css" href="<%=myPath %>/template/myCss7.css">
+
+<script>
+$(function(){
+	$('<div class="menubtn" style="margin-top: 10px;"/>')
+		.append('<span class="navbar-toggler-icon"></span>')
+		.prependTo('.btnPlace')
+		.click(function(){
+			$('nav>div>div>ul>li').toggle();
+		})
+	;
+	
+	$(window).on('resize',function(){
+		if($('.navbar').width()<950){
+			$('.menubtn').show();
+			$('nav>div>div>ul>li').css('display', 'block').hide();
+		}else{
+			$('.menubtn').hide();
+			$('nav>div>div>ul>li').css('display', 'inline-block');
+		}
+	});
+});
+
+$(function(){
+	if($('.navbar').width()<950){
+		$('.menubtn').show();
+		$('nav>div>div>ul>li').css('display', 'block').hide();
+	}else{
+		$('.menubtn').hide();
+		$('nav>div>div>ul>li').css('display', 'inline-block');
+	}
+});
+</script>
+   
+<nav class="navbar navbar-expand-lg navbar-light bg-light navBar">
+       <div class="container-fluid" style="display: inline">
+       <a class="navbar-brand" href="<%=myPath %>/index.jsp"><img class="logoImg" src="<%=myPath %>/imgs/computer.png"></a>
+       <div class="btnPlace" style="display:inline-block"></div>
+
+       <br>
+
+       <div class="navbar-collapse" id="navbarColor03">
+			<ul class="navbar-nav me-auto menuBar" style="font-size: 11pt;">
+			<li class="nav-item">
+			    <a class="nav-link" href="<%=myPath %>/index.jsp">Home</a>
+			</li>
 			
-			$(window).on('resize',function(){
-				if($('.navbar').width()<950){
-					$('.menubtn').show();
-					$('nav>div>div>ul>li').css('display', 'block').hide();
-				}else{
-					$('.menubtn').hide();
-					$('nav>div>div>ul>li').css('display', 'inline-block');
-				}
-			});
-		});
-
-		$(function(){
-			if($('.navbar').width()<950){
-				$('.menubtn').show();
-				$('nav>div>div>ul>li').css('display', 'block').hide();
-			}else{
-				$('.menubtn').hide();
-				$('nav>div>div>ul>li').css('display', 'inline-block');
-			}
-		});
-	</script>
-    
-	<nav class="navbar navbar-expand-lg navbar-light bg-light navBar">
-        <div class="container-fluid" style="display: inline">
-            <a class="navbar-brand" href="<%=myPath %>/index.jsp"><img class="logoImg" src="<%=myPath %>/imgs/computer.png"></a>
-            <div class="btnPlace" style="display:inline-block"></div>
-
-            <br>
-
-            <div class="navbar-collapse" id="navbarColor03">
-                <ul class="navbar-nav me-auto menuBar" style="font-size: 11pt;">
-                    <li class="nav-item">
-                        <a class="nav-link" href="<%=myPath %>/index.jsp">Home</a>
-                    </li>
-                    
-                    <li class="nav-item">
-                        <a class="nav-link" href="<%=myPath %>/portfolio/projectList.jsp">Portfolio</a>
-                    </li>
-                    
-                    <li class="nav-item">
-                        <a class="nav-link" href="<%=myPath %>/board/boardList.jsp">Board</a>
-                    </li>
-                    
-                    <jsp:useBean id="login" class="com.bit.util.UserDto" scope="session"></jsp:useBean>
-					<%if(login.isResult()){ %>
-						<li class="nav-item"><a class="nav-link" href="<%=myPath %>/login/logout.jsp">LOGOUT</a></li>
-					<%} else {%>
-						<li class="nav-item"><a class="nav-link" href="<%=myPath %>/login/login.jsp">LOGIN</a></li>
-					<%} %>
-                </ul>
-            </div>
+			<li class="nav-item">
+			    <a class="nav-link" href="<%=myPath %>/portfolio/projectList.jsp">Portfolio</a>
+			</li>
+			
+			<li class="nav-item">
+			    <a class="nav-link" href="<%=myPath %>/board/boardList.jsp">Board</a>
+			</li>
+               
+				<jsp:useBean id="login" class="com.bit.util.UserDto" scope="session"></jsp:useBean>
+				<%if(login.isResult()){ %>
+					<li class="nav-item"><a class="nav-link" href="<%=myPath %>/login/logout.jsp">LOGOUT</a></li>
+				<%} else {%>
+					<li class="nav-item"><a class="nav-link" href="<%=myPath %>/login/login.jsp">LOGIN</a></li>
+				<%} %>
+            </ul>
         </div>
-    </nav>
-    <div class="marginDiv"></div>
+    </div>
+</nav>
+<div class="marginDiv"></div>
